Refactored LibraryFragment tabs and titles

--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -30,106 +30,26 @@
             </androidx.appcompat.widget.Toolbar>
 
             <TextView
-                android:id="@+id/libraryTitle"
+                android:id="@+id/title_primary"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="@string/library"
                 android:textSize="24sp"
                 android:gravity="center_vertical"
                 android:layout_marginStart="21dp"
-                android:layout_marginEnd="21dp"
-                android:alpha="0"
                 android:fontFamily="@font/boldfont"
                 android:textColor="?libraryTitleColor"
-                app:layout_constraintBottom_toBottomOf="@id/toolbar"
-                app:layout_constraintTop_toTopOf="@id/toolbar"
-                app:layout_constraintStart_toStartOf="parent"
                 />
 
             <TextView
-                android:id="@+id/albumTitle"
+                android:id="@+id/title_secondary"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="@string/albums"
                 android:fontFamily="@font/boldfont"
                 android:textSize="24sp"
-                android:alpha="0"
                 android:gravity="center_vertical"
-                android:layout_marginStart="21dp"
-                android:layout_marginEnd="21dp"
-                android:textColor="?libraryTitleColor"
-                app:layout_constraintBottom_toBottomOf="@id/toolbar"
-                app:layout_constraintTop_toTopOf="@id/toolbar"
-                app:layout_constraintStart_toStartOf="parent"
-                />
-
-            <TextView
-                android:id="@+id/artistTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/artists"
-                android:fontFamily="@font/boldfont"
-                android:textSize="24sp"
                 android:alpha="0"
-                android:gravity="center_vertical"
                 android:layout_marginStart="21dp"
-                android:layout_marginEnd="21dp"
                 android:textColor="?libraryTitleColor"
-                app:layout_constraintBottom_toBottomOf="@id/toolbar"
-                app:layout_constraintTop_toTopOf="@id/toolbar"
-                app:layout_constraintStart_toStartOf="parent"
-                />
-
-            <TextView
-                android:id="@+id/genresTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/genres"
-                android:fontFamily="@font/boldfont"
-                android:textSize="24sp"
-                android:alpha="0"
-                android:gravity="center_vertical"
-                android:layout_marginStart="21dp"
-                android:layout_marginEnd="21dp"
-                android:textColor="?libraryTitleColor"
-                app:layout_constraintBottom_toBottomOf="@id/toolbar"
-                app:layout_constraintTop_toTopOf="@id/toolbar"
-                app:layout_constraintStart_toStartOf="parent"
-                />
-
-
-            <TextView
-                android:id="@+id/playlistTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/playlists"
-                android:fontFamily="@font/boldfont"
-                android:textSize="24sp"
-                android:alpha="0"
-                android:gravity="center_vertical"
-                android:layout_marginStart="21dp"
-                android:layout_marginEnd="21dp"
-                android:textColor="?libraryTitleColor"
-                app:layout_constraintBottom_toBottomOf="@id/toolbar"
-                app:layout_constraintTop_toTopOf="@id/toolbar"
-                app:layout_constraintStart_toStartOf="parent"
-                />
-
-            <TextView
-                android:id="@+id/moreTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/more"
-                android:fontFamily="@font/boldfont"
-                android:textSize="24sp"
-                android:alpha="0"
-                android:gravity="center_vertical"
-                android:layout_marginStart="21dp"
-                android:layout_marginEnd="21dp"
-                android:textColor="?libraryTitleColor"
-                app:layout_constraintBottom_toBottomOf="@id/toolbar"
-                app:layout_constraintTop_toTopOf="@id/toolbar"
-                app:layout_constraintStart_toStartOf="parent"
                 />
 
             <ViewStub
