--- a/app/src/main/res/layout/dialog_change_background.xml
+++ b/app/src/main/res/layout/dialog_change_background.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/dialog_background"
+    android:padding="24dp"
     >
 
     <androidx.constraintlayout.widget.Guideline
@@ -17,10 +18,8 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:layout_marginStart="22dp"
         android:textSize="19.2sp"
-        android:fontFamily="@font/semiboldfont"
+        android:fontFamily="@font/boldfont"
         android:textColor="?textColor"
         android:text="@string/change_bg_dialog_title"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,89 +27,32 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <TextView
-        android:id="@+id/desc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="22dp"
-        android:textSize="12sp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/semiboldfont"
-        android:textColor="?textColor"
-        android:text="@string/change_bg_dialog_desc"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        />
-
-    <ImageView
-        android:id="@+id/reset_button"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginStart="12dp"
-        android:background="@drawable/theme_button_bg"
-        android:backgroundTint="?buttonBackground"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/guideline50"
-        app:layout_constraintTop_toBottomOf="@id/desc" />
-
-    <TextView
-        android:id="@+id/label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/semiboldfont"
-        android:textColor="?textColor"
-        android:text="@string/change_bg_dialog_reset_button"
-        android:textSize="12dp"
-        app:layout_constraintEnd_toEndOf="@id/reset_button"
-        app:layout_constraintStart_toStartOf="@id/reset_button"
-        app:layout_constraintTop_toBottomOf="@id/reset_button" />
-
-    <ImageView
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_bg_reset_24"
-        app:layout_constraintBottom_toBottomOf="@id/reset_button"
-        app:layout_constraintEnd_toEndOf="@id/reset_button"
-        app:layout_constraintStart_toStartOf="@id/reset_button"
-        app:layout_constraintTop_toTopOf="@id/reset_button" />
-
-    <ImageView
+    <Button
         android:id="@+id/pick_button"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="6dp"
+        android:background="@drawable/button_active"
+        android:text="@string/change_bg_dialog_pick_button"
+        android:fontFamily="@font/semiboldfont"
+        android:elevation="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/guideline50"
+        app:layout_constraintTop_toBottomOf="@id/title" />
+
+    <Button
+        android:id="@+id/reset_button"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
         android:layout_marginStart="6dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="12dp"
-        android:background="@drawable/theme_button_bg"
-        android:backgroundTint="?buttonBackground"
+        android:layout_marginTop="12dp"
+        android:text="@string/change_bg_dialog_reset_button"
+        android:fontFamily="@font/semiboldfont"
+        android:background="@drawable/button_passive"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline50"
-        app:layout_constraintTop_toBottomOf="@id/desc" />
-
-    <ImageView
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_bg_pick_24"
-        app:layout_constraintBottom_toBottomOf="@id/pick_button"
-        app:layout_constraintEnd_toEndOf="@id/pick_button"
-        app:layout_constraintStart_toStartOf="@id/pick_button"
-        app:layout_constraintTop_toTopOf="@id/pick_button" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/semiboldfont"
-        android:textColor="?textColor"
-        android:text="@string/change_bg_dialog_pick_button"
-        android:textSize="12dp"
-        app:layout_constraintEnd_toEndOf="@id/pick_button"
-        app:layout_constraintStart_toStartOf="@id/pick_button"
-        app:layout_constraintTop_toBottomOf="@id/pick_button" />
+        app:layout_constraintTop_toBottomOf="@id/title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
