Removed unused resources Removed unused strings, integers, colors, dimens and strings

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,1 @@
-<resources>
-  <style name="Theme.Phonograph.Light.NoActionBar" >
-  <item name="windowActionBar">false</item>
-  <item name="windowNoTitle">true</item>
-</style>
-  <style name="Theme.Phonograph.Light.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-  <style name="Theme.Phonograph.Light.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-</resources>
+<resources></resources>
