Refactored theme system - Simplified style_parent themes - Improved design for theming of toolbars, appbars and statusbars - Streamlined theme access - Removed unused and redundant code

--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -9,7 +9,8 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         style="@style/Toolbar"
-        android:background="@android:color/transparent" />
+        android:elevation="0dp"
+        android:background="?toolBarColor" />
 
     <FrameLayout
         android:id="@+id/content_frame"
