--- a/app/src/main/res/layout/status_bar.xml
+++ b/app/src/main/res/layout/status_bar.xml
@@ -4,6 +4,6 @@
     android:id="@+id/status_bar"
     android:layout_width="match_parent"
     android:layout_height="@dimen/status_bar_padding"
-    android:background="@android:color/transparent"
-    android:elevation="@dimen/toolbar_elevation"
+    android:background="?statusBarColor"
+    android:elevation="0dp"
     tools:ignore="UnusedAttribute" />
