--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,53 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.Phonograph" parent="Theme.Phonograph.Base" />
+    <style name="Theme.Phonograph" parent="Theme.Phonograph.Base">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+    </style>
 
-    <style name="Theme.Phonograph.Light" parent="Theme.Phonograph.Base.Light" />
+    <style name="Theme.Phonograph.Light" parent="Theme.Phonograph.Base.Light">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+    </style>
 
-    <style name="Theme.Phonograph.Black" parent="Theme.Phonograph.Base.Black" />
+    <style name="Theme.Phonograph.ClassicDark" parent="Theme.Phonograph.Base.Dark.Classic">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+    </style>
 
-    <style name="Theme.Phonograph.White" parent="Theme.Phonograph.Base.White" />
+    <style name="Theme.Phonograph.ClassicLight" parent="Theme.Phonograph.Base.Light.Classic">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+    </style>
 
-    <style name="Theme.Phonograph.Stars." parent="Theme.Phonograph.Base.Stars" />
+    <style name="Theme.Phonograph.Stars" parent="Theme.Phonograph.Base.Stars">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+    </style>
 
-    <style name="Theme.Phonograph.Midnight." parent="Theme.Phonograph.Base.Midnight" />
+    <style name="Theme.Phonograph.Midnight" parent="Theme.Phonograph.Base.Stars">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+    </style>
 
-    <style name="Theme.Phonograph.Blur" parent="Theme.Phonograph.Base.Blur" />
+    <style name="Theme.Phonograph.Blur" parent="Theme.Phonograph.Base.Blur">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+    </style>
 
-    <style name="Theme.Phonograph.Retrowave" parent="Theme.Phonograph.Base.Retrowave" />
+    <style name="Theme.Phonograph.Retrowave" parent="Theme.Phonograph.Base.Retrowave">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+    </style>
 
+    <style name="Theme.Phonograph.Energetic" parent="Theme.Phonograph.Base.Energetic">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+    </style>
 
-    <style name="Theme.Phonograph.Notification" parent="@android:style/TextAppearance.StatusBar.EventContent" />
+    <style name="Theme.Phonograph.Notification" parent="@android:style/TextAppearance.Material.Notification" />
 
-    <style name="Theme.Phonograph.Notification.Title" parent="@android:style/TextAppearance.StatusBar.EventContent.Title" />
+    <style name="Theme.Phonograph.Notification.Title" parent="@android:style/TextAppearance.Material.Notification.Title" />
 
     <style name="OverFlowButton">
         <item name="srcCompat">@drawable/ic_more_vert_white_24dp</item>
@@ -32,7 +60,9 @@
         <item name="android:focusable">false</item>
     </style>
 
-    <style name="Fab" parent="FabParent" />
+    <style name="Fab" parent="FabParent">
+        <item name="android:transitionName">@string/transition_fab</item>
+    </style>
 
     <style name="Toolbar">
         <item name="titleMarginStart">16dp</item>
