--- a/app/src/main/res/values/styles_parents.xml
+++ b/app/src/main/res/values/styles_parents.xml
@@ -1,266 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <style name="Theme.Phonograph.Base" parent="Theme.AppCompat.NoActionBar">
-
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="windowActionBarOverlay">true</item>
-
         <item name="md_dark_theme">true</item>
-
+        <item name="android:windowBackground">@android:color/black</item>
         <item name="roundSelector">@drawable/round_selector_dark</item>
         <item name="rectSelector">@drawable/rect_selector_dark</item>
         <item name="rectSelectorStrong">@drawable/rect_selector_strong_dark</item>
-
-        <item name="cardBackgroundColor">@color/md_grey_800</item>
-        <item name="playlistCardBackground">@android:color/transparent</item>
-
-        <item name="defaultFooterColor">@android:color/transparent</item>
-
-        <item name="dividerColor">@color/md_divider_white</item>
         <item name="iconColor">@color/ate_secondary_text_dark</item>
-
         <item name="toolbarPopupTheme">@style/ThemeOverlay.AppCompat</item>
-
-
-        <!-- just in case-->
         <item name="colorAccent">@android:color/white</item>
-
-        <!-- necessary to find the overflow button later in the layout-->
         <item name="android:actionOverflowButtonStyle">@style/Widget.ActionButton.Overflow</item>
-
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
-        <item name="starsVisibilityMode">gone</item>
-        <item name="blurVisibilityMode">gone</item>
-        <item name="darkVisibilityMode">gone</item>
-        <item name="lightVisibilityMode">gone</item>
-        <item name="lightKenVisibilityMode">gone</item>
-        <item name="darkKenVisibilityMode">gone</item>
-        <item name="KenVisibilityMode">gone</item>
-        <item name="textColor">#ffffff</item>
-        <item name="libraryTitleColor">#ffffff</item>
-        <item name="materialSecondary">#10ffffff</item>
-        <item name="fabIconColor">@color/black</item>
-        <item name="circularProgressTrack">#20ffffff</item>
-        <item name="buttonBackground">#2d2d2d</item>
-    </style>
-
-    <style name="Theme.Phonograph.Base.Light" parent="Theme.AppCompat.Light.NoActionBar">
-
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="windowActionBarOverlay">true</item>
-
-        <item name="md_dark_theme">false</item>
-
-        <item name="roundSelector">@drawable/round_selector</item>
-        <item name="rectSelector">@drawable/rect_selector</item>
-        <item name="rectSelectorStrong">@drawable/rect_selector_strong</item>
-
-        <item name="cardBackgroundColor">@color/md_white_1000</item>
-        <item name="playlistCardBackground">@android:color/transparent</item>
-
-        <item name="defaultFooterColor">@android:color/black</item>
-
-        <item name="dividerColor">@color/md_divider_black</item>
-        <item name="iconColor">@color/ate_secondary_text_light</item>
-
-        <item name="toolbarPopupTheme">@style/ThemeOverlay.AppCompat.Light</item>
-
-        <!-- just in case-->
-        <item name="colorAccent">@android:color/black</item>
-
-        <!-- necessary to find the overflow button later in the layout-->
-        <item name="android:actionOverflowButtonStyle">@style/Widget.ActionButton.Overflow</item>
-
-        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
-        <item name="starsVisibilityMode">gone</item>
-        <item name="blurVisibilityMode">gone</item>
-        <item name="darkVisibilityMode">gone</item>
-        <item name="lightVisibilityMode">visible</item>
-        <item name="lightKenVisibilityMode">gone</item>
-        <item name="darkKenVisibilityMode">gone</item>
-        <item name="KenVisibilityMode">gone</item>
-        <item name="textColor">#000000</item>
-        <item name="libraryTitleColor">#ffffff</item>
-        <item name="materialSecondary">#E0E0E0</item>
-        <item name="fabIconColor">@color/white</item>
-        <item name="circularProgressTrack">#20000000</item>
-        <item name="buttonBackground">#e1e1e1</item>
-    </style>
-
-    <style name="Theme.Phonograph.Base.Black" parent="@style/Theme.Phonograph.Base">
-        <item name="android:windowBackground">@android:color/black</item>
         <item name="dividerColor">#18FFFFFF</item>
         <item name="defaultFooterColor">@android:color/transparent</item>
         <item name="cardBackgroundColor">#000000</item>
         <item name="playlistCardBackground">@android:color/transparent</item>
-        <item name="md_background_color">@color/md_grey_900</item>
         <item name="starsVisibilityMode">gone</item>
         <item name="blurVisibilityMode">gone</item>
         <item name="darkVisibilityMode">visible</item>
         <item name="lightVisibilityMode">gone</item>
-        <item name="lightKenVisibilityMode">gone</item>
-        <item name="darkKenVisibilityMode">gone</item>
-        <item name="KenVisibilityMode">gone</item>
         <item name="textColor">#ffffff</item>
         <item name="libraryTitleColor">#ffffff</item>
-        <item name="materialSecondary">#212121</item>
         <item name="fabIconColor">@color/black</item>
-        <item name="buttonBackground">#2d2d2d</item>
+        <item name="circularProgressTrack">#20ffffff</item>
+        <item name="buttonBackground">#3c3c3c</item>
+        <item name="dialogBackgroundColor">#1e1e1e</item>
+        <item name="md_background_color">@color/md_grey_900</item>
+        <item name="statusBarColor">@android:color/transparent</item>
+        <item name="appBarColor">@android:color/transparent</item>
+        <item name="toolBarColor">@android:color/transparent</item>
+        <item name="isProTheme">false</item>
     </style>
 
-    <style name="Theme.Phonograph.Base.White" parent="@style/Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@android:color/white</item>
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="windowActionBarOverlay">true</item>
+    <style name="Theme.Phonograph.Base.Light" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="md_dark_theme">false</item>
+        <item name="android:windowBackground">@android:color/white</item>
         <item name="roundSelector">@drawable/round_selector</item>
         <item name="rectSelector">@drawable/rect_selector</item>
         <item name="rectSelectorStrong">@drawable/rect_selector_strong</item>
-        <item name="cardBackgroundColor">@color/md_white_1000</item>
-        <item name="playlistCardBackground">@android:color/transparent</item>
-        <item name="defaultFooterColor">@android:color/black</item>
-        <item name="dividerColor">@color/md_divider_black</item>
         <item name="iconColor">@color/ate_secondary_text_light</item>
         <item name="toolbarPopupTheme">@style/ThemeOverlay.AppCompat.Light</item>
-        <!-- just in case-->
         <item name="colorAccent">@android:color/black</item>
-        <!-- necessary to find the overflow button later in the layout-->
         <item name="android:actionOverflowButtonStyle">@style/Widget.ActionButton.Overflow</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+        <item name="dividerColor">@color/md_divider_black</item>
+        <item name="defaultFooterColor">@android:color/black</item>
+        <item name="cardBackgroundColor">@color/md_white_1000</item>
+        <item name="playlistCardBackground">@android:color/transparent</item>
         <item name="starsVisibilityMode">gone</item>
         <item name="blurVisibilityMode">gone</item>
         <item name="darkVisibilityMode">gone</item>
         <item name="lightVisibilityMode">visible</item>
-        <item name="lightKenVisibilityMode">gone</item>
-        <item name="darkKenVisibilityMode">gone</item>
-        <item name="KenVisibilityMode">gone</item>
         <item name="textColor">#000000</item>
         <item name="libraryTitleColor">#000000</item>
-        <item name="materialSecondary">#E0E0E0</item>
         <item name="fabIconColor">@color/white</item>
+        <item name="circularProgressTrack">#20000000</item>
         <item name="buttonBackground">#e1e1e1</item>
+        <item name="dialogBackgroundColor">#ffffff</item>
+        <item name="md_background_color">@color/md_grey_900</item>
+        <item name="statusBarColor">#ffffff</item>
+        <item name="appBarColor">#ffffff</item>
+        <item name="toolBarColor">#ffffff</item>
+        <item name="isProTheme">false</item>
+    </style>
+
+    <style name="Theme.Phonograph.Base.Dark.Classic" parent="@style/Theme.Phonograph.Base">
+        <item name="android:windowBackground">#121212</item>
+        <item name="dividerColor">@color/md_divider_white</item>
+        <item name="cardBackgroundColor">@color/md_grey_800</item>
+        <item name="isProTheme">true</item>
+    </style>
+
+    <style name="Theme.Phonograph.Base.Light.Classic" parent="@style/Theme.Phonograph.Base.Light">
+        <item name="android:windowBackground">#F5F5F5</item>
+        <item name="libraryTitleColor">#ffffff</item>
+        <item name="isProTheme">true</item>
     </style>
 
     <style name="Theme.Phonograph.Base.Stars" parent="@style/Theme.Phonograph.Base">
         <item name="android:windowBackground">@android:color/black</item>
         <item name="dividerColor">#18FFFFFF</item>
-        <item name="defaultFooterColor">@android:color/transparent</item>
         <item name="cardBackgroundColor">#000000</item>
-        <item name="playlistCardBackground">@android:color/transparent</item>
-        <item name="md_background_color">@color/md_grey_900</item>
         <item name="starsVisibilityMode">visible</item>
-        <item name="blurVisibilityMode">gone</item>
-        <item name="darkVisibilityMode">visible</item>
-        <item name="lightVisibilityMode">gone</item>
-        <item name="lightKenVisibilityMode">gone</item>
-        <item name="darkKenVisibilityMode">gone</item>
-        <item name="KenVisibilityMode">gone</item>
-        <item name="textColor">#ffffff</item>
-        <item name="libraryTitleColor">#ffffff</item>
-        <item name="materialSecondary">#20ffffff</item>
-        <item name="fabIconColor">@color/black</item>
-        <item name="buttonBackground">#2d2d2d</item>
+        <item name="isProTheme">true</item>
     </style>
 
     <style name="Theme.Phonograph.Base.Midnight" parent="@style/Theme.Phonograph.Base">
         <item name="android:windowBackground">@android:color/black</item>
         <item name="dividerColor">#18FFFFFF</item>
-        <item name="defaultFooterColor">@android:color/transparent</item>
         <item name="cardBackgroundColor">#000000</item>
-        <item name="playlistCardBackground">@android:color/transparent</item>
-        <item name="md_background_color">@color/md_grey_900</item>
         <item name="starsVisibilityMode">visible</item>
-        <item name="blurVisibilityMode">gone</item>
-        <item name="darkVisibilityMode">visible</item>
-        <item name="lightVisibilityMode">gone</item>
-        <item name="lightKenVisibilityMode">gone</item>
-        <item name="darkKenVisibilityMode">gone</item>
-        <item name="KenVisibilityMode">gone</item>
-        <item name="textColor">#ffffff</item>
-        <item name="libraryTitleColor">#ffffff</item>
-        <item name="materialSecondary">#20ffffff</item>
-        <item name="fabIconColor">@color/black</item>
-        <item name="buttonBackground">#2d2d2d</item>
+        <item name="isProTheme">true</item>
     </style>
 
     <style name="Theme.Phonograph.Base.Blur" parent="@style/Theme.Phonograph.Base">
         <item name="android:windowBackground">@android:color/black</item>
         <item name="dividerColor">#18FFFFFF</item>
-        <item name="defaultFooterColor">@android:color/transparent</item>
         <item name="cardBackgroundColor">#000000</item>
-        <item name="playlistCardBackground">@android:color/transparent</item>
-        <item name="md_background_color">@color/md_grey_900</item>
-        <item name="starsVisibilityMode">gone</item>
         <item name="blurVisibilityMode">visible</item>
-        <item name="darkVisibilityMode">visible</item>
-        <item name="lightVisibilityMode">gone</item>
-        <item name="lightKenVisibilityMode">gone</item>
-        <item name="darkKenVisibilityMode">gone</item>
-        <item name="KenVisibilityMode">gone</item>
-        <item name="textColor">#ffffff</item>
-        <item name="libraryTitleColor">#ffffff</item>
-        <item name="materialSecondary">#20ffffff</item>
-        <item name="fabIconColor">@color/black</item>
-        <item name="buttonBackground">#2d2d2d</item>
-
+        <item name="isProTheme">true</item>
     </style>
 
     <style name="Theme.Phonograph.Base.Retrowave" parent="@style/Theme.Phonograph.Base">
         <item name="android:windowBackground">@drawable/gradient_retrowave</item>
         <item name="dividerColor">#18FFFFFF</item>
-        <item name="defaultFooterColor">@android:color/transparent</item>
         <item name="cardBackgroundColor">#000000</item>
-        <item name="playlistCardBackground">@android:color/transparent</item>
-        <item name="md_background_color">@color/md_grey_900</item>
-        <item name="starsVisibilityMode">gone</item>
-        <item name="blurVisibilityMode">gone</item>
-        <item name="darkVisibilityMode">visible</item>
-        <item name="lightVisibilityMode">gone</item>
-        <item name="lightKenVisibilityMode">gone</item>
-        <item name="darkKenVisibilityMode">gone</item>
-        <item name="KenVisibilityMode">gone</item>
         <item name="textColor">#F473B9</item>
         <item name="libraryTitleColor">#ECA089</item>
-        <item name="materialSecondary">#20ffffff</item>
-        <item name="fabIconColor">@color/black</item>
-        <item name="buttonBackground">#2d2d2d</item>
-
+        <item name="isProTheme">true</item>
     </style>
 
     <style name="Theme.Phonograph.Base.Energetic" parent="@style/Theme.Phonograph.Base">
         <item name="android:windowBackground">@color/black</item>
         <item name="dividerColor">#18FFFFFF</item>
-        <item name="defaultFooterColor">@android:color/transparent</item>
         <item name="cardBackgroundColor">#000000</item>
-        <item name="playlistCardBackground">@android:color/transparent</item>
-        <item name="md_background_color">@color/md_grey_900</item>
-        <item name="starsVisibilityMode">gone</item>
-        <item name="blurVisibilityMode">gone</item>
-        <item name="darkVisibilityMode">visible</item>
-        <item name="lightVisibilityMode">gone</item>
-        <item name="lightKenVisibilityMode">gone</item>
-        <item name="darkKenVisibilityMode">gone</item>
-        <item name="KenVisibilityMode">gone</item>
         <item name="textColor">#fff82f</item>
         <item name="libraryTitleColor">#000000</item>
-        <item name="materialSecondary">#20ffffff</item>
-        <item name="fabIconColor">@color/black</item>
         <item name="buttonBackground">#2d2d2d</item>
-
+        <item name="statusBarColor">@color/yellow</item>
+        <item name="appBarColor">@color/yellow</item>
+        <item name="toolBarColor">@color/yellow</item>
+        <item name="isProTheme">true</item>
     </style>
 
     <style name="FabParent">
         <item name="borderWidth">0dp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-    </style>
-
-    <style name="MusicProgressSliderParent">
-        <item name="android:progressDrawable">@android:color/transparent</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:thumb">@drawable/slider_thumb</item>
     </style>
 
     <style name="DialogAnimation">
