--- a/app/src/main/res/xml/pref_colors.xml
+++ b/app/src/main/res/xml/pref_colors.xml
@@ -5,7 +5,7 @@
 
         <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEListPreference
             app:iconSpaceReserved="false"
-            android:defaultValue="black"
+            android:defaultValue="dark"
             android:entries="@array/pref_general_theme_list_titles"
             android:entryValues="@array/pref_general_theme_list_values"
             android:key="general_theme"
