Added scan media option to main menu Moved scan media from MoreFragment to the main menu as a dropdown option, to reduce clutter.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -72,6 +72,12 @@
     </item>
 
     <item
+        android:id="@+id/action_scan"
+        android:icon="@drawable/ic_scanner_white_24dp"
+        android:title="@string/scan_media"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_colored_footers"
         android:visible="false"
         android:checkable="true"
