Altered dialog background color - Switched dialog background to dialog background color - Altered dialog background color for light theme

--- a/app/src/main/res/drawable/dialog_background.xml
+++ b/app/src/main/res/drawable/dialog_background.xml
@@ -7,7 +7,7 @@
                 android:topRightRadius="20dp"
                 />
             <solid
-                android:color="?cardBackgroundColor"
+                android:color="?dialogBackgroundColor"
                 />
         </shape>
     </item>
