--- a/app/src/main/res/drawable/pro_layout_card.xml
+++ b/app/src/main/res/drawable/pro_layout_card.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:radius="10dp"
+        android:radius="20dp"
         />
-    <stroke android:color="#ff0000"
-        android:width="1dp"
+    <solid android:color="?dialogBackgroundColor"
         />
 </shape>
